# life-factors-and-student-performace

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
notebooks/combined_datasets/: 04_feature_engineering.ipynb
notebooks/mat_dataset_single/: 01_etl_data_cleaning.ipynb  02_eda_feature_analysis.ipynb  03_model_training.ipynb
reports/: feature_importance.csv  model_metrics.json
scripts/: train_model.py
src/: __init__.py  config.py  debug_model.py  main.py  model.py  schemas.py
tests/: test_api.py
